# GenAI-Prompt-Test-Suites

./: .editorconfig  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  requirements.txt
src/: case.py  client.py  config.py  main.py
src/clients/: __init__.py  anthropic.py  anthropic_client.py  base_client.py  bedrock.py  bedrock_client.py  huggingface_client.py  ollama.py  ollama_client.py  openai.py  openai_client.py
src/tests/: __init__.py  base_test.py  regex.py  regex_test.py  substring.py  substring_test.py  word.py  word_test.py
test/: test_client.py  test_config.py
test/clients/: test_anthropic.py  test_bedrock.py  test_huggingface.py  test_invalid_client.py  test_ollama.py  test_openai.py
test/tests/: test_invalid.py  test_regex.py  test_substring.py  test_word.py
